[package]
name = "dyyl"
version = "0.2.0"
edition = "2021"
description = "dyyl scripting language interpreter — scaffold and CAS backend spike"

[dependencies]
mathcore = "0.3"
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
regex = "1"
ureq = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
libloading = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
unused_must_use = "deny"
non_ascii_idents = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

unwrap_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
as_underscore = "deny"
fn_to_numeric_cast_any = "deny"
dbg_macro = "warn"
use_debug = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[profile.dev]
opt-level = 0
debug = true
incremental = true
